--- a/App.css
+++ b/App.css
@@ -7,6 +7,11 @@
   pointer-events: none;
 }
 
+h1 {
+  padding-bottom: 70px;
+  font-size: 30px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
