--- a/App.css
+++ b/App.css
@@ -7,6 +7,52 @@
   pointer-events: none;
 }
 
+.dropbtn {
+  background-color:  #581845;
+  color: white;
+  padding: 16px;
+  font-size: 20px;
+  border: none;
+  font-family: VT323, monospace;
+  font-weight: bold;
+  border-radius: 2px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  font-family: VT323, monospace;
+  float: right;
+  right:0;
+  margin-left:  800px;
+  
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  font-family: VT323, monospace;
+  font-weight: bold;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  font-family: VT323, monospace;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #70284c;} 
+
 h1 {
   padding-bottom: 70px;
   font-size: 30px;
@@ -18,7 +64,7 @@ h1 {
   }
 }
 
-.App-header {
+/*.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -27,7 +73,7 @@ h1 {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+}*/
 
 .App-link {
   color: #61dafb;
